[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://screens/MainMenuScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://screens/LoadingScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://screens/GameScreen.tscn" type="PackedScene" id=4]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="LoadingScreen" parent="." instance=ExtResource( 3 )]

[node name="MainMenuScreen" parent="." instance=ExtResource( 2 )]

[node name="GameScreen" parent="." instance=ExtResource( 4 )]
